add configuration crud example
